# tupalang

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-hooks.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-RUNTIME  Makefile  README.en.md  README.md  SUMMARY.md  api_with_pipeline.ll  api_with_pipeline.plan.json  audit_report.json  credit_decision.plan.json  data.json  ffi_demo.plan.json  fraud_complete.FraudDetection.plan.json  fraud_complete.plan.json  hello.ll  index.md  integration_test.tupa  out.json  py_test.plan.json  test_pipe.tupa  update_golden.py  validation_demos.LinearRegression.plan.json  validation_demos.MnistClassifier.plan.json  validation_demos.plan.json
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backport-label-check.yml  ci.yml  docs-lint.yml  examples-golden.yml  pr-type-labeler.yml  publish-crates.yml  release-drafter.yml  release.yml  wiki-sync.yml
crates/tupa-audit/: Cargo.toml  README.md
crates/tupa-audit/src/: lib.rs
crates/tupa-cli/: Cargo.toml  README.md
crates/tupa-cli/src/: main.rs  run.rs
crates/tupa-cli/tests/: cli.rs  cli_golden.rs  cli_help_snapshots.rs  run.rs
crates/tupa-cli/tests/snapshots/: help_audit.txt  help_check.txt  help_codegen.txt  help_root.txt  help_run.txt
crates/tupa-codegen/: Cargo.toml  README.md
crates/tupa-codegen/src/: execution_plan.rs  lib.rs
crates/tupa-effects/: Cargo.toml  README.md
crates/tupa-effects/src/: lib.rs
crates/tupa-fmt/: Cargo.toml  README.md
crates/tupa-fmt/src/: lib.rs
crates/tupa-lexer/: Cargo.toml  README.md
crates/tupa-lexer/src/: lib.rs
crates/tupa-lint/: Cargo.toml  README.md
crates/tupa-lint/src/: lib.rs
crates/tupa-parser/: Cargo.toml  README.md
crates/tupa-parser/src/: lib.rs
crates/tupa-pyffi/: Cargo.toml  README.md
crates/tupa-pyffi/src/: lib.rs  serialize.rs
crates/tupa-runtime/: Cargo.toml  README.md
crates/tupa-runtime/examples/: mnist_validation.rs  viper_async.rs  viper_audit.rs  viper_backtest.rs  viper_circuit_breaker.rs  viper_inference.rs  viper_model.py  viper_poc.rs
crates/tupa-runtime/src/: lib.rs  tensor.rs
crates/tupa-typecheck/: Cargo.toml  README.md
crates/tupa-typecheck/src/: lib.rs
crates/tupa-validator/: Cargo.toml
docker/: ci-local.Dockerfile  tupa-cli.Dockerfile
docker/base/: rust-builder.Dockerfile  rust-runtime.Dockerfile
docs/: ADOPTION_PLAN.md  AI_SUPPORT_SUGGESTIONS.md  API_EXTENSIBILITY.md  ARCHITECTURE.md  AUDIT_ENGINE.md  CHANGELOG.md  CI_GUIDE.md  CODEGEN.md  COMMON_ERRORS.md  COMPATIBILITY.md  CONTRIBUTING_FAQ.md  DESIGN_NOTES.md  DEV_ENV.md  DIAGNOSTICS_CHECKLIST.md  DIAGNOSTICS_GLOSSARY.md  DOCS_CONTRIBUTING.md  EFFECT_SYSTEM.md  ENV_SETUP.md  ERROR_MESSAGES.md  EXAMPLES_GUIDE.md  EXECUTION_PLAN_SCHEMA.md  FAQ.en.md  FAQ.md  GETTING_STARTED.en.md  GETTING_STARTED.md  GLOSSARY.md  GOVERNANCE.md  ISSUES.md  ISSUES_GUIDE.md  MVP_PLAN.md  PIPELINE_GUIDE.md  PROJECT_OVERVIEW.md  README.en.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_NOTES_v0.7.0.md  RELEASE_PLAN.md  ROADMAP.md  SECURITY.md  (+10 more)
docs/blog/: v0.7.0.md
docs/en/: index.md  summary.md
docs/es/: index.md  summary.md
docs/marketing/: tweet_thread_v0.7.0.md
docs/pt-br/: README.md  SUMMARY.md  index.md  summary.md
examples/: README.md  arith.tp  array_ops.tp  arrays.tp  audit_hello.tp  audit_inputs.json  audit_inputs_invalid.json  bool_ops.tp  bool_print.tp  break_continue.tp  closure_basic.tp  closure_capture.tp  enum_basic.tp  ffi_utils.py  float_array_ops.tp  float_ops.tp  fmt_test.tp  for_range.tp  fraud.py  function_call.tp  functions.tp  gen_inputs.py  guards.tp  hello.codegen.txt  hello.tp  if_else.tp  if_expr.tp  if_match.tp  if_unit_expr.tp  input_fraud.json  input_linear.json  input_mnist.json  invalid_array_mixed.tp  invalid_assign_index_value.tp  invalid_assign_type.tp  invalid_binary_op.tp  invalid_break.tp  invalid_call.tp  invalid_call_target.tp  invalid_continue.tp  (+51 more)
examples/audit/: credit_pipeline.tp  fraud_pipeline.tp
examples/effects/: io.tp  pure_function.tp
examples/expected/: audit_hello.json  audit_hello.txt  check_hello.json  check_invalid_array_mixed.json  check_invalid_array_mixed.txt  check_invalid_assign_index_value.json  check_invalid_assign_index_value.txt  check_invalid_assign_type.json  check_invalid_assign_type.txt  check_invalid_binary_op.json  check_invalid_binary_op.txt  check_invalid_break.json  check_invalid_break.txt  check_invalid_call.json  check_invalid_call.txt  check_invalid_call_target.json  check_invalid_call_target.txt  check_invalid_continue.json  check_invalid_continue.txt  check_invalid_for_range_type.json  check_invalid_for_range_type.txt  check_invalid_if_condition.json  check_invalid_if_condition.txt  check_invalid_index_base.json  check_invalid_index_base.txt  check_invalid_index_type.json  check_invalid_index_type.txt  check_invalid_match_arm_type.json  check_invalid_match_arm_type.txt  check_invalid_match_guard.json  check_invalid_match_guard.txt  check_invalid_match_pattern.json  check_invalid_match_pattern.txt  check_invalid_print_arity.json  check_invalid_print_arity.txt  check_invalid_range_bounds.json  check_invalid_range_bounds.txt  check_invalid_return.json  check_invalid_return.txt  check_invalid_return_type.json  (+70 more)
examples/integration/: api_with_pipeline.tp
examples/pipeline/: README.md  config_driven_strategy.json  config_driven_strategy.tp  credit_decision.tp  customer_churn.tp  deterministic_violation.tp  ffi_demo.tp  fraud_complete.tp  loan_underwriting.tp  minimal.tp  now_violation.tp  temporal_policy.json  temporal_policy.tp  time_violation.tp  tx.json  undefined_metric.tp  vipertrade_smoke.tp
examples/playground/: README.md
examples/production/: README.md  audit_report.json  mnist_cnn_model.py  mnist_pipeline.tp  mnist_sample.json  (+2 more)
scripts/: build-base-images.sh  build-tupa-cli-image.sh  ci-local-container.sh  ci-local.sh  docs-parity-check.sh  release-verify.sh  sync-wiki.sh  update-goldens.sh  vipertrade-smoke.sh
(+164 files in other folders)
