[package]
name = "tupa-audit"
version = "0.8.1"
edition = "2021"
description = "Audit utilities for TupaLang execution traces"
license = "Apache-2.0"
repository = "https://github.com/marciopaiva/tupalang"
homepage = "https://github.com/marciopaiva/tupalang"
documentation = "https://github.com/marciopaiva/tupalang/wiki"
readme = "README.md"

[dependencies]
serde_json = "1.0"
sha3 = "0.10"
tupa-parser = { path = "../tupa-parser", version = "0.8.1" }
