[package]
name = "tupa-cli"
version = "0.8.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tupa-audit = { path = "../tupa-audit" }
tupa-lexer = { path = "../tupa-lexer" }
tupa-parser = { path = "../tupa-parser" }
tupa-typecheck = { path = "../tupa-typecheck" }
tupa-codegen = { path = "../tupa-codegen" }
tupa-effects = { path = "../tupa-effects" }
tupa-runtime = { path = "../tupa-runtime" }
tupa-pyffi = { path = "../tupa-pyffi" }
tupa-fmt = { path = "../tupa-fmt" }
tupa-lint = { path = "../tupa-lint" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
