[package]
name = "tupa-codegen"
version = "0.8.0"
edition = "2021"

[dependencies]
tupa-parser = { path = "../tupa-parser", version = "0.8.0" }
tupa-lexer = { path = "../tupa-lexer", version = "0.8.0" }
tupa-typecheck = { path = "../tupa-typecheck", version = "0.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
