[package]
name = "tupa-codegen"
version = "0.8.1"
edition = "2021"
description = "Code generation layer for TupaLang"
license = "Apache-2.0"
repository = "https://github.com/marciopaiva/tupalang"
homepage = "https://github.com/marciopaiva/tupalang"
documentation = "https://github.com/marciopaiva/tupalang/wiki"
readme = "README.md"

[dependencies]
tupa-parser = { path = "../tupa-parser", version = "0.8.1" }
tupa-lexer = { path = "../tupa-lexer", version = "0.8.1" }
tupa-typecheck = { path = "../tupa-typecheck", version = "0.8.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
