[package]
name = "tupa-lexer"
version = "0.8.1"
edition = "2021"
description = "Lexer for TupãLang with tokens for pipelines, steps, and effects"
license = "Apache-2.0"
repository = "https://github.com/marciopaiva/tupalang"
homepage = "https://github.com/marciopaiva/tupalang"
documentation = "https://github.com/marciopaiva/tupalang/wiki"
readme = "README.md"

[dependencies]
nom = "7.1"
thiserror = "1.0"
unicode-normalization = "0.1"
serde = { version = "1.0", features = ["derive"] }
