[package]
name = "tupa-lint"
version = "0.1.0"
edition = "2021"
description = "Linter for TupaLang source code"
license = "Apache-2.0"
repository = "https://github.com/marciopaiva/tupalang"
homepage = "https://github.com/marciopaiva/tupalang"
documentation = "https://github.com/marciopaiva/tupalang/wiki"

[dependencies]
tupa-parser = { path = "../tupa-parser", version = "0.8.0" }
tupa-lexer = { path = "../tupa-lexer", version = "0.8.0" }
