[package]
name = "tupa-pyffi"
version = "0.8.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }
serde = "1.0"
serde_json = "1.0"
tupa-parser = { path = "../tupa-parser", version = "0.8.0" }
tupa-typecheck = { path = "../tupa-typecheck", version = "0.8.0" }
once_cell = "1.19"
thiserror = "1.0"
