[package]
name = "tupa-runtime"
version = "0.8.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
thiserror = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread"], optional = true }
tupa-codegen = { path = "../tupa-codegen" }
