[package]
name = "tupa-runtime"
version = "0.8.0"
edition = "2021"
description = "Runtime for executing TupaLang programs"
license = "Apache-2.0"
repository = "https://github.com/marciopaiva/tupalang"
homepage = "https://github.com/marciopaiva/tupalang"
documentation = "https://github.com/marciopaiva/tupalang/wiki"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
tupa-codegen = { path = "../tupa-codegen", version = "0.8.0" }
tupa-pyffi = { path = "../tupa-pyffi", version = "0.8.0" }

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Observability & Audit
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
