[package]
name = "tupa-typecheck"
version = "0.8.0"
edition = "2021"
description = "Static type checker for TupaLang"
license = "Apache-2.0"
repository = "https://github.com/marciopaiva/tupalang"
homepage = "https://github.com/marciopaiva/tupalang"
documentation = "https://github.com/marciopaiva/tupalang/wiki"
readme = "README.md"

[dependencies]
thiserror = "1.0"
tupa-parser = { path = "../tupa-parser", version = "0.8.0" }
tupa-lexer = { path = "../tupa-lexer", version = "0.8.0" }
tupa-effects = { path = "../tupa-effects", version = "0.8.0" }
